# go2_control_cpp

./: CMakeLists.txt  package.xml
config/: nav2_params.yaml
src/: simple_go2_walker.cpp  waypoint_navigator.cpp
src/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
src/log/: latest_build
